toolchain/internal/core/analysis/testdata/errors/consts/deep_missing_enum_member.vdl
// @expect: E305

enum Region {
  UsEast1
  EuWest1
}

const cfg = {
  routing {
    region Region.ApSouth1
  }
}
